fix checkboxes on recipepage being squished if too much text next to it

--- a/css/recipePage.css
+++ b/css/recipePage.css
@@ -164,6 +164,10 @@
   cursor:pointer;
 }
 
+.checklist li label span {
+  max-width: 80%;
+}
+
 .checklist--ingredients li label{
   background: var(--bgBlue);
 
